# TowerDefense

./: .gitignore  CMakeLists.txt  README.md  sc.py
business/: CMakeLists.txt
business/data/levels/: 1.txt  2.txt  3.txt  4.txt  5.txt
business/include/: Game.hpp  GameSettings.hpp  Level.hpp  LevelReader.hpp  WaveManager.hpp
business/include/Attack/: AttackManager.hpp  BaseAttack.hpp
business/include/Attack/Attacks/: ArcheryAttack.hpp  CatapultAttack.hpp  CrossbowAttack.hpp  ElectroAttack.hpp  OrbAttack.hpp  SlingshotAttack.hpp
business/include/Enemy/: BaseEnemy.hpp  EnemyFactory.hpp  EnemyManager.hpp
business/include/Enemy/Enemies/: ClampBeetle.hpp  FireBug.hpp  FireWasp.hpp  FlyingLocust.hpp  LeafBug.hpp  MagmaCrab.hpp  Scorpion.hpp  VoidButterfly.hpp
business/include/Map/: BaseTile.hpp  BuildableTile.hpp  EnemyPathTile.hpp  Map.hpp  NonBuildableTile.hpp
business/include/Tower/: BaseTower.hpp  TowerManager.hpp  Upgrade.hpp
business/include/Tower/Towers/: ArcheryTower.hpp  CatapultTower.hpp  CrossbowTower.hpp  ElectroTower.hpp  IonPrism.hpp  OrbTower.hpp  SlingshotTower.hpp
business/include/Utils/: Collidable.hpp  Drawable.hpp  Moveable.hpp  Positionable.hpp  Vector.hpp
business/public/: Game.hpp  GameSettings.hpp
business/src/: Game.cpp  GameSettings.cpp  Level.cpp  LevelReader.cpp  WaveManager.cpp
business/src/Attack/: AttackManager.cpp  BaseAttack.cpp
business/src/Attack/Attacks/: ArcheryAttack.cpp  CatapultAttack.cpp  CrossbowAttack.cpp  ElectroAttack.cpp  OrbAttack.cpp  SlingshotAttack.cpp
business/src/Enemy/: BaseEnemy.cpp  EnemyFactory.cpp  EnemyManager.cpp
business/src/Enemy/Enemies/: ClampBeetle.cpp  FireBug.cpp  FireWasp.cpp  FlyingLocust.cpp  LeafBug.cpp  MagmaCrab.cpp  Scorpion.cpp  VoidButterfly.cpp
business/src/Map/: BaseTile.cpp  BuildableTile.cpp  EnemyPathTile.cpp  Map.cpp  NonBuildableTile.cpp
business/src/Tower/: BaseTower.cpp  TowerManager.cpp  Upgrade.cpp
business/src/Tower/Towers/: ArcheryTower.cpp  CatapultTower.cpp  CrossbowTower.cpp  ElectroTower.cpp  IonPrism.cpp  OrbTower.cpp  SlingshotTower.cpp
business/src/Utils/: Collidable.cpp  Drawable.cpp  Moveable.cpp  Positionable.cpp  Vector.cpp
data/: attack_info.txt  enemy_info.txt  tower_info.txt
data/levels/: 1.txt  2.txt  3.txt  4.txt  5.txt
mbuild/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
mbuild/business/: Makefile  cmake_install.cmake
mbuild/presentation/: Makefile  cmake_install.cmake
presentation/: CMakeLists.txt
presentation/include/: App.hpp
presentation/include/Components/: BackgroundManager.hpp  Button.hpp  IButton.hpp  IconButton.hpp  LevelButton.hpp  MusicPlayer.hpp  Page.hpp  PageFactory.hpp  PageManager.hpp  PriceModal.hpp  SFXPlayer.hpp  Sidebar.hpp  SidebarItem.hpp  SidebarTowerButton.hpp  SpriteSheetManager.hpp  StandardButton.hpp  Text.hpp  TextButton.hpp  Title.hpp
presentation/include/Enums/: Event.hpp  PageType.hpp
presentation/include/Enums/Events/: BackgroundEvents.hpp  PageEvents.hpp
presentation/include/Interfaces/: Clickable.hpp  EventData.hpp  Observable.hpp  Observer.hpp  RenderData.hpp  UpdateData.hpp  View.hpp  Widget.hpp
presentation/include/Pages/: AboutPage.hpp  GamePage.hpp  LevelPage.hpp  LevelsPage.hpp  LosePage.hpp  MainMenu.hpp  PausePage.hpp  WinPage.hpp
presentation/include/Utils/: FontFactory.hpp  Stack.hpp  TextBuilder.hpp
presentation/include/Views/: AttackView.hpp  BuildableTileView.hpp  EnemyPathTileView.hpp  EnemyView.hpp  NonBuildableTileView.hpp  TileView.hpp  TowerView.hpp
presentation/include/Widgets/: MuteButton.hpp
presentation/include/Widgets/MainMenu/: Title.hpp
presentation/src/: App.cpp
presentation/src/Components/: BackgroundManager.cpp  Button.cpp  IButton.cpp  IconButton.cpp  LevelButton.cpp  MusicPlayer.cpp  Page.cpp  PageFactory.cpp  PageManager.cpp  PriceModal.cpp  SFXPlayer.cpp  Sidebar.cpp  SidebarItem.cpp  SidebarTowerButton.cpp  SpriteSheetManager.cpp  StandardButton.cpp  Text.cpp  TextButton.cpp  Title.cpp
presentation/src/Interfaces/: Clickable.cpp  View.cpp
presentation/src/Pages/: AboutPage.cpp  GamePage.cpp  LevelsPage.cpp  LosePage.cpp  MainMenu.cpp  PausePage.cpp  WinPage.cpp
presentation/src/Utils/: FontFactory.cpp  TextBuilder.cpp
presentation/src/Views/: AttackView.cpp  BuildableTileView.cpp  EnemyPathTileView.cpp  EnemyView.cpp  NonBuildableTileView.cpp  TileView.cpp  TowerView.cpp
presentation/src/Widgets/: MuteButton.cpp
presentation/src/Widgets/MainMenu/: Title.cpp
